--- a/Bases/index.html
+++ b/Bases/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typescript Bases</title>
-    <script src="app.js"></script>
+    <!-- <script src="./tipos/booleans.js"></script> -->
+    <!-- <script src="./tipos/numbers.js"></script> -->
+    <script src="./tipos/string.js"></script>
   </head>
   <body></body>
 </html>
