--- a/Bases/index.html
+++ b/Bases/index.html
@@ -6,7 +6,21 @@
     <title>Typescript Bases</title>
     <!-- <script src="./tipos/booleans.js"></script> -->
     <!-- <script src="./tipos/numbers.js"></script> -->
-    <script src="./tipos/string.js"></script>
+    <!-- <script src="./tipos/string.js"></script> -->
+    <!-- <script src="./tipos/any.js"></script> -->
+    <!-- <script src="./tipos/arrays.js"></script> -->
+    <!-- <script src="./tipos/tuples.js"></script> -->
+    <!-- <script src="./tipos/enums.js"></script> -->
+    <!-- <script src="./tipos/void.js"></script> -->
+    <!-- <script src="./tipos/never.js"></script> -->
+    <!-- <script src="./tipos/null-undefined.js"></script> -->
+    <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./funciones/functions.js"></script> -->
+    <!-- <script src="./funciones/args-required.js"></script> -->
+    <!-- <script src="./funciones/args-opcional.js"></script> -->
+    <!-- <script src="./funciones/args-default.js"></script> -->
+    <!-- <script src="./funciones/args-rests.js"></script> -->
+    <script src="./funciones/function-type.js"></script>
   </head>
   <body></body>
 </html>
