--- a/Bases/index.html
+++ b/Bases/index.html
@@ -20,7 +20,7 @@
     <!-- <script src="./funciones/args-opcional.js"></script> -->
     <!-- <script src="./funciones/args-default.js"></script> -->
     <!-- <script src="./funciones/args-rests.js"></script> -->
-    <script src="./funciones/function-type.js"></script>
+    <script src="./objetos/union-types.js"></script>
   </head>
   <body></body>
 </html>
