Hicimos cambios en tsconfig , incluir y excluir archivos

--- a/Bases/index.html
+++ b/Bases/index.html
@@ -20,7 +20,10 @@
     <!-- <script src="./funciones/args-opcional.js"></script> -->
     <!-- <script src="./funciones/args-default.js"></script> -->
     <!-- <script src="./funciones/args-rests.js"></script> -->
-    <script src="./objetos/union-types.js"></script>
+    <!-- <script src="./objetos/union-types.js"></script> -->
+    <!-- <script src="./objetos/objects.js"></script> -->
+    <script src="ES6/classes-es6.js"></script>
+    <!-- <script src="./main.js"></script> -->
   </head>
   <body></body>
 </html>
