--- a/Bases/index.html
+++ b/Bases/index.html
@@ -22,8 +22,8 @@
     <!-- <script src="./funciones/args-rests.js"></script> -->
     <!-- <script src="./objetos/union-types.js"></script> -->
     <!-- <script src="./objetos/objects.js"></script> -->
-    <script src="ES6/classes-es6.js"></script>
-    <!-- <script src="./main.js"></script> -->
+    <!-- <script src="ES6/classes-es6.js"></script> -->
+    <script src="./main.js"></script>
   </head>
   <body></body>
 </html>
